--- a/package.json
+++ b/package.json
@@ -10,12 +10,21 @@
   },
   "dependencies": {
     "@prisma/client": "^4.5.0",
+    "@tanstack/react-query": "^4.13.0",
+    "@trpc/client": "^10.0.0-proxy-beta.26",
+    "@trpc/next": "^10.0.0-proxy-beta.26",
+    "@trpc/react-query": "^10.0.0-proxy-beta.26",
+    "@trpc/server": "^10.0.0-proxy-beta.26",
+    "copy-to-clipboard": "^3.3.2",
+    "lodash": "^4.17.21",
     "nanoid": "^4.0.0",
     "next": "13.0.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "zod": "^3.19.1"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.186",
     "@types/node": "^18.11.7",
     "@types/react": "18.0.24",
     "@types/react-dom": "18.0.8",
